# NewsPull

./: .env.example  .gitignore  README.md  pyproject.toml  run  test-api.py
docs/superpowers/plans/: 2026-04-15-newspull-implementation.md
docs/superpowers/specs/: 2026-04-15-newspull-design.md
graphify-out/: .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
newspull/: config.py  db.py  models.py
newspull/agents/: digester.py  feedback.py  gatherer.py  orchestrator.py  taster.py
newspull/cli/: main.py
newspull/sources/: base.py  hn.py  reddit.py  rss.py  youtube.py
newspull/web/: app.py
newspull/web/templates/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_digester.py  test_feedback.py  test_gatherer.py  test_models.py  test_orchestrator.py  test_sources.py  test_taster.py  test_web.py
