[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newspull"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.0",
    "zhipuai>=2.1",
    "httpx>=0.27",
    "feedparser>=6.0",
    "playwright>=1.44",
    "typer>=0.12",
    "rich>=13.0",
    "flask>=3.0",
    "tomli-w>=1.0",
]

[project.scripts]
newspull = "newspull.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
